--- a/14-LearnJSAdvance/01-面向对象版tab栏切换/styles/tab.css
+++ b/14-LearnJSAdvance/01-面向对象版tab栏切换/styles/tab.css
@@ -3,8 +3,18 @@
   padding: 0;
 }
 
+::-webkit-scrollbar {
+  height: 8px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(90, 99, 106, 0.5);
+}
+
 body {
-  background-color: rgba(0, 0, 0, .1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 ul li {
@@ -18,7 +28,7 @@ main {
   margin: 50px auto;
 }
 
-main h4 {
+main h2 {
   height: 100px;
   line-height: 100px;
   text-align: center;
@@ -28,46 +38,57 @@ main h4 {
   width: 900px;
   margin: 0 auto;
   height: 400px;
-  border: 1px solid rgba(0, 0, 0, .2);
-  box-shadow: 0 10px 15px 2px rgba(0, 0, 0, .2);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 15px 2px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   background-color: #fff;
   position: relative;
 }
 
-nav ul {
+nav .tablist {
+  display: flex;
+  width: 840px;
+  height: 58px;
   overflow: hidden;
+  overflow-x: overlay;
 }
 
 nav ul li {
-  float: left;
-  width: 100px;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
-  border-right: 1px solid #ccc;
   position: relative;
-  cursor: pointer;
+  padding: 0 30px 0 20px;
+  border-right: 1px solid #ccc;
+  white-space: nowrap;
+  text-align: center;
 }
 
 nav ul li.liactive {
+  color: #0984e3;
   border-bottom: 2px solid #fff;
   z-index: 9;
 }
 
 #tab input {
+  min-width: 80px;
   width: 80%;
   height: 60%;
 }
 
+nav ul li span {
+  display: block;
+  height: 50px;
+  line-height: 50px;
+  cursor: pointer;
+  user-select: none;
+}
+
 nav ul li span:last-child {
   position: absolute;
-  user-select: none;
-  font-size: 12px;
-  top: -18px;
-  right: 0;
+  top: -15px;
+  right: 6px;
   display: inline-block;
-  height: 20px;
+  height: 30px;
+  font-size: 18px;
+  user-select: none;
 }
 
 .tabadd {
@@ -78,26 +99,28 @@ nav ul li span:last-child {
 }
 
 .tabadd span {
+  float: right;
   display: block;
   width: 20px;
   height: 20px;
+  margin: 10px;
   line-height: 20px;
   text-align: center;
   border: 1px solid #ccc;
-  float: right;
-  margin: 10px;
+  cursor: pointer;
   user-select: none;
 }
 
 .tabscon {
+  /* position: absolute; */
   width: 100%;
   height: 300px;
-  position: absolute;
-  padding: 30px;
-  top: 50px;
-  left: 0px;
+  padding: 20px;
+  /* top: 50px; */
+  /* left: 0px; */
   box-sizing: border-box;
   border-top: 1px solid #ccc;
+  user-select: none;
 }
 
 .tabscon section,
